Tweak README structure (include packages)